@@ -670,6 +670,13 @@ function readNumberingProperties(styleId, element, numbering) {
         }
     }
 
+    // Some malformed documents define numbering levels without an index, and
+    // reference the numbering using a w:numPr element without a w:ilvl child.
+    // To handle such cases, we assume a level of 0 as a fallback.
+    if (numId !== undefined) {
+        return numbering.findLevel(numId, "0");
+    }
+
     return null;
 }
 
