@@ -64,17 +64,36 @@ function readAbstractNums(root) {
 
 function readAbstractNum(element) {
     var levels = {};
+
+    // Some malformed documents define numbering levels without an index, and
+    // reference the numbering using a w:numPr element without a w:ilvl child.
+    // To handle such cases, we assume a level of 0 as a fallback.
+    var levelWithoutIndex = null;
+
     element.getElementsByTagName("w:lvl").forEach(function(levelElement) {
         var levelIndex = levelElement.attributes["w:ilvl"];
         var numFmt = levelElement.firstOrEmpty("w:numFmt").attributes["w:val"];
+        var isOrdered = numFmt !== "bullet";
         var paragraphStyleId = levelElement.firstOrEmpty("w:pStyle").attributes["w:val"];
 
-        levels[levelIndex] = {
-            isOrdered: numFmt !== "bullet",
-            level: levelIndex,
-            paragraphStyleId: paragraphStyleId
-        };
+        if (levelIndex === undefined) {
+            levelWithoutIndex = {
+                isOrdered: isOrdered,
+                level: "0",
+                paragraphStyleId: paragraphStyleId
+            };
+        } else {
+            levels[levelIndex] = {
+                isOrdered: isOrdered,
+                level: levelIndex,
+                paragraphStyleId: paragraphStyleId
+            };
+        }
     });
+
+    if (levels["0"] === undefined && levelWithoutIndex !== null) {
+        levels["0"] = levelWithoutIndex;
+    }
 
     var numStyleLink = element.firstOrEmpty("w:numStyleLink").attributes["w:val"];
 
