@@ -4,6 +4,8 @@
 
 * Support disabling external file accesses using the externalFileAccess option.
 
+* Handle numbering levels defined without an index.
+
 # 1.10.0
 
 * Add "Heading" and "Body" styles, as found in documents created by Apple Pages,
